--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <!--style type="text/css"></style-->
 
-    <link href="dist/css/index.css" rel="stylesheet"/>
-    <link href='dist/css/standalone.css' rel='stylesheet'/>
-    <link href='dist/css/api-explorer.css' rel='stylesheet' type='text/css'/>
-    <link href='dist/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
+    <link href="css/index.css" rel="stylesheet"/>
+    <link href='css/standalone.css' rel='stylesheet'/>
+    <link href='css/api-explorer.css' rel='stylesheet' type='text/css'/>
+    <link href='css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
 
-    <script src='dist/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
-    <script src='dist/lib/jquery.slideto.min.js' type='text/javascript'></script>
-    <script src='dist/lib/jquery.wiggle.min.js' type='text/javascript'></script>
-    <script src='dist/lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
-    <script src='dist/lib/handlebars-2.0.0.js' type='text/javascript'></script>
-    <script src='dist/lib/underscore-min.js' type='text/javascript'></script>
-    <script src='dist/lib/backbone-min.js' type='text/javascript'></script>
-    <script src='dist/swagger-ui.js' type='text/javascript'></script>
-    <script src='dist/lib/jsoneditor.js' type='text/javascript'></script>
-    <script src='dist/lib/highlight.7.3.pack.js' type='text/javascript'></script>
-    <script src='dist/lib/marked.js' type='text/javascript'></script>
-    <script src='dist/lib/swagger-oauth.js' type='text/javascript'></script>
-    <script src='dist/lib/bootstrap.min.js' type='text/javascript'></script>
+    <script src='lib/jquery-1.8.0.min.js' type='text/javascript'></script>
+    <script src='lib/jquery.slideto.min.js' type='text/javascript'></script>
+    <script src='lib/jquery.wiggle.min.js' type='text/javascript'></script>
+    <script src='lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
+    <script src='lib/handlebars-2.0.0.js' type='text/javascript'></script>
+    <script src='lib/underscore-min.js' type='text/javascript'></script>
+    <script src='lib/backbone-min.js' type='text/javascript'></script>
+    <script src='swagger-ui.js' type='text/javascript'></script>
+    <script src='lib/jsoneditor.js' type='text/javascript'></script>
+    <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
+    <script src='lib/marked.js' type='text/javascript'></script>
+    <script src='lib/swagger-oauth.js' type='text/javascript'></script>
+    <script src='lib/bootstrap.min.js' type='text/javascript'></script>
 
     <script type="text/javascript">
         jQuery.browser = jQuery.browser || {};
